    (Closes: #943337)
  * drivers/net/wireless: Enable RTW88_8723DE
  * netfilter: nfnetlink: Ignore ABI changes (nfnetlink_unicast)

  [ Vagrant Cascadian ]
  * [arm64] Enable BATTERY_CW2015 as a module.
  * [arm64] Apply patch from upstream to support battery status on
    Pinebook Pro.

  [ Ben Hutchings ]
  * [hppa] Set Build-Profiles for linux-image-parisc{,64}-smp (Closes: #970011)

 -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 07 Sep 2020 21:50:08 +0200

linux (5.8.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.8.4
    - ext4: fix potential negative array index in do_split() (CVE-2020-14314)
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.8.5
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.8.6
    - nfsd: fix oops on mixed NFSv4/NFSv3 client access
    - [powerpc] 32s: Disable VMAP stack which CONFIG_ADB_PMU (Closes: #963689)
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.8.7

  [ Ben Hutchings ]
  * [mips*] udeb: Drop hfs-modules (fixes FTBFS)
  * [m68k,powerpc,ppc64] udeb: Make hfs-modules depend on cdrom-core-modules
    (fixes FTBFS)
  * tools/include/uapi: Fix <asm/errno.h> (probably fixes FTBFS on ia64)
  * bpftool: Build with Debian recommended compiler options

  [ Salvatore Bonaccorso ]
  * iwlwifi: yoyo: don't print failure if debug firmware is missing
    (Closes: #966218)
  * debian/tests/python: pycodestyle: Increase max-line-length to 100.
  * net/packet: fix overflow in tpacket_rcv (CVE-2020-14386)
  * Set ABI to 1

  [ Uwe Kleine-König ]
  * [arm64] Enable a few options for Kobol's helios64

 -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 05 Sep 2020 16:52:44 +0200

linux (5.8.3-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_5.8
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.8.1