@@ -2,6 +2,7 @@
 flavours:
  amd64
  cloud-amd64
+default-flavour: amd64
 
 [cloud-amd64_image]
 configs:
