@@ -2,6 +2,7 @@
 flavours:
  arm64
  cloud-arm64
+default-flavour: arm64
 
 [cloud-arm64_image]
 configs:
