@@ -2,6 +2,7 @@
 cflags: -ffreestanding
 flavours:
  m68k
+default-flavour: m68k
 kernel-arch: m68k
 
 [build]
