@@ -180,6 +180,8 @@ linux (5.8.9-1) UNRELEASED; urgency=medium
 
   [ Ben Hutchings ]
   * [hppa] Set Build-Profiles for linux-image-parisc{,64}-smp (Closes: #970011)
+  * Provide linux-{image,headers}-generic virtual packages on most
+    architectures (Closes: #960209)
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 07 Sep 2020 21:50:08 +0200
 
